// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#users.activate should require admin 1`] = `
{
  "error": "authorization_error",
  "message": "Authorization error",
  "ok": false,
  "status": 403,
}
`;

exports[`#users.delete should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#users.demote should not allow demoting self 1`] = `
{
  "error": "validation_error",
  "message": "You cannot change your own role",
  "ok": false,
  "status": 400,
}
`;

exports[`#users.demote should require admin 1`] = `
{
  "error": "authorization_error",
  "message": "Admin role required",
  "ok": false,
  "status": 403,
}
`;

exports[`#users.promote should require admin 1`] = `
{
  "error": "authorization_error",
  "message": "Admin role required",
  "ok": false,
  "status": 403,
}
`;

exports[`#users.suspend should not allow suspending the user themselves 1`] = `
{
  "error": "validation_error",
  "message": "Unable to suspend the current user",
  "ok": false,
  "status": 400,
}
`;

exports[`#users.suspend should require admin 1`] = `
{
  "error": "authorization_error",
  "message": "Authorization error",
  "ok": false,
  "status": 403,
}
`;

exports[`#users.update should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#users.updateEmail post should fail if email not in allowed domains 1`] = `
{
  "error": "validation_error",
  "message": "The domain is not allowed for this workspace",
  "ok": false,
  "status": 400,
}
`;

exports[`#users.updateEmail post should fail if email not unique in workspace 1`] = `
{
  "error": "validation_error",
  "message": "User with email already exists",
  "ok": false,
  "status": 400,
}
`;

exports[`#users.updateEmail post should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;
